tetris-app-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: tetris-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tetris-app
    spec:
      containers:
      - name: tetris-app
        image: uzyexe/tetris:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: tetris-app
