tetris-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-lb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demoaks-tetris.famazon.fi
    http:
      paths:
      - path: /
        backend:
          serviceName: tetris
          servicePort: 80
  - host: demoaks.famazon.fi
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-app
          servicePort: 80
